Adding twitter and github id's to README

--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-ANOTHER JQUERY AUTO COMPLETE by R.Sussex
+ANOTHER JQUERY AUTO COMPLETE
+twitter: ukwebdeveloper
+github: ukwebdeveloper
 
 Basic Usage :
 
