--- a/README
+++ b/README
@@ -29,14 +29,14 @@ ONLOAD :
 
 <div class="autoComplete-holder">
 	<input class="autoComplete-hiddenField" type="hidden" name="searchField">
-	<input id="autoComplete" class="auto_complete-active" type="text">
+	<input id="autoComplete" class="autoComplete-active" type="text">
 </div>
 
 WITH SEARCH RESULTS :
 
 <div class="autoComplete-holder">
 	<input class="autoComplete-hiddenField" type="hidden" name="searchField">
-	<input id="autoComplete" class="auto_complete-active" type="text">
+	<input id="autoComplete" class="autoComplete-active" type="text">
 	<div class="list-holder" style="position:absolute;left:400px;top:222px;width:498px;"> <!-- NOTE : left, top and width are calculated from the original input element and offset accordingly -->
 		<ul>
 			<li id="1">Testing</li>
@@ -50,5 +50,5 @@ AFTER SEARCH RESULT HAS BEEN SELECTED :
 
 <div class="autoComplete-holder">
 <input class="autoComplete-hiddenField" type="hidden" name="searchField" value="1"> <!-- NOTE : The value of "serachField" this is the value from the ID of the LI selected. -->
-<input id="autoComplete" class="auto_complete-active" type="text">
+<input id="autoComplete" class="autoComplete-active" type="text">
 </div>
